--- a/css/styles.css
+++ b/css/styles.css
@@ -70,6 +70,7 @@ body {
   padding-top: 24px;
   padding-bottom: 24px;
 }
+
 .main-nav {
   display: flex;
   align-items: center;
@@ -99,102 +100,143 @@ body {
 }
 
 .header-nav-list {
-  display: flex;
-  margin-left: 76px;
-}
-
-.header-nav-list .header-nav-item + .header-nav-item {
-  margin-left: 40px;
-}
-
-.header-nav-item {
-}
-.header-nav-link {
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: #2e2f42;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.header-nav-link:hover {
-  color: #404bbf;
-}
-
-.header-nav-link:focus {
-  color: #404bbf;
-}
-
-.current {
-  position: relative;
-  display: block;
-}
-
-.current::after {
-  content: "";
-  display: block;
-  width: 100%;
-  height: 4px;
-  background-color: #404bbf;
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  border-radius: 2px;
   display: none;
-  z-index: 1;
-  margin-bottom: -24px;
-}
-
-.current:not(:active)::after {
-  display: block;
 }
 
 .header-address {
+  display: none;
 }
-.header-address-list {
+
+/*Mobile menu*/
+.mob-menu > .container {
+  height: 100%;
   display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  overflow-y: auto;
 }
 
-.header-address-list .header-address-item + .header-address-item {
-  margin-left: 40px;
+.menu-open {
+  display: block;
+  margin-left: auto;
+  background-color: transparent;
+  border: none;
+}
+.menu-open-icon {
+  stroke: #000000;
+}
+.mob-menu {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #ffffff;
+  z-index: 1;
+  padding-top: 24px;
+  padding-bottom: 40px;
+  padding-left: 40px;
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
-.header-address-item {
+.menu-close {
+  display: block;
+  margin-left: auto;
+  margin-bottom: 32px;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  cursor: pointer;
+  border: none;
 }
 
-.header-address-mailto {
-  font-style: normal;
-  font-size: 16px;
-  line-height: 1.5;
+.menu-close-icon {
+}
+.mob-menu-list {
+}
+.mob-menu-item {
+  margin-bottom: 40px;
+}
+.mob-menu-link {
+  font-size: 36px;
+  line-height: 1.11;
   letter-spacing: 0.02em;
-  color: #434455;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  text-transform: capitalize;
+  color: #2e2f42;
 }
 
-.header-address-mailto:hover {
+.mob-menu-link:hover {
   color: #404bbf;
 }
 
-.header-address-mailto:focus {
+.mob-menu-link:focus {
   color: #404bbf;
 }
 
-.header-address-tel {
+.mob-menu-address {
+}
+.menu-address-list {
+}
+
+.menu-address-item {
+  margin-bottom: 40px;
+}
+.menu-address-tel {
   font-style: normal;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
+  font-size: 25px;
+  line-height: 1.1;
+  text-transform: capitalize;
   color: #434455;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.header-address-tel:hover {
-  color: #404bbf;
+.menu-address-tel:hover {
+  color: #4d5ae5;
 }
 
-.header-address-tel:focus {
-  color: #404bbf;
+.menu-address-tel:focus {
+  color: #4d5ae5;
+}
+
+.menu-address-mailto {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  color: #434455;
+}
+
+.menu-address-mailto:hover {
+  color: #4d5ae5;
+}
+
+.menu-address-mailto:focus {
+  color: #4d5ae5;
+}
+
+.menu-soc-list {
+  display: flex;
+  justify-content: center;
+  margin: 0px -15px;
+}
+
+.menu-soc-item {
+  width: 40px;
+  height: 40px;
+  margin: 0px 15px;
+}
+
+.menu-soc-link {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background-color: #4d5ae5;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.menu-soc-icon {
+  fill: #f4f4fd;
 }
 
 /* Footer */
@@ -207,7 +249,6 @@ body {
   padding-bottom: 100px;*/
 
 .ftr-content {
-  
 }
 /*display: flex;*/
 
@@ -218,7 +259,7 @@ body {
 
 .ftr-logo {
   display: block;
-    font-family: "Raleway";
+  font-family: "Raleway";
   font-weight: 800;
   font-size: 18px;
   line-height: 1.17;
@@ -240,8 +281,8 @@ body {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: #F4F4FD;
-  margin-top:  17px;
+  color: #f4f4fd;
+  margin-top: 17px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -273,13 +314,11 @@ body {
   margin: 0px -8px;
 }
 
-
 .ftr-soc-item {
   width: 40px;
   height: 40px;
   margin: 0px 8px;
 }
-
 
 .ftr-soc-link {
   width: 100%;
@@ -301,7 +340,6 @@ body {
 }
 
 .ftr-subscribe {
-  
 }
 /*margin-left: 80px;*/
 
@@ -316,21 +354,20 @@ body {
 }
 
 .ftr-subscribe-email {
-  
 }
 
 .subscribe-input {
   width: 100%;
   height: 40px;
   padding-left: 16px;
-  border: 1px solid #FFFFFF;
+  border: 1px solid #ffffff;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
   font-size: 12px;
   line-height: 2;
   align-items: center;
   letter-spacing: 0.04em;
-  color: #FFFFFF;
+  color: #ffffff;
   background-color: #2e2f42;
 }
 /* width: 264px;*/
@@ -370,27 +407,40 @@ body {
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
     ),
-    url(../images/hero.jpg);
+    url(../images/hero-mob.jpg);
   background-repeat: no-repeat;
   background-position: center;
-  background-size: 1440px 600px;
-  padding-top: 188px;
-  padding-bottom: 188px;
+  background-size: 428px 432px;
+  padding-top: 112px;
+  padding-bottom: 112px;
   text-align: center;
 }
+
+@media (min-device-pixel-ratio: 2),
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx) {
+  .hero {
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/hero-mob-2x.jpg);
+  }
+}
+
 /* 
 
 background-color: #2e2f42; */
 
 .hero-title {
-  width: 500px;
+  width: 310px;
 
-  font-size: 56px;
-  line-height: 1.07;
+  font-size: 30px;
+  line-height: 1.1;
   margin: 0 auto;
   letter-spacing: 0.02em;
   color: #ffffff;
-  margin-bottom: 48px;
+  margin-bottom: 72px;
 }
 
 .hero-button {
@@ -426,33 +476,28 @@ background-color: #2e2f42; */
   padding-bottom: 24px;
 }
 
-
 .feature-list {
   display: flex;
   flex-direction: column;
   align-items: center;
-  
 }
 /*margin: 0px -12px;*/
 
 .feature-item {
   width: 320px;
-  margin-bottom:  72px;
+  margin-bottom: 72px;
 }
 /*margin: 0px 12px;*/
 
 .future-ctr {
-display: none;
+  display: none;
 }
-
-
 
 .future-icon {
 }
 
 .feature-title {
-  
-   margin-bottom: 8px;
+  margin-bottom: 8px;
   font-size: 36px;
   line-height: 1.1;
   letter-spacing: 0.02em;
@@ -461,9 +506,7 @@ display: none;
   text-transform: capitalize;
 }
 
-
 .feature-text {
- 
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
@@ -477,9 +520,8 @@ display: none;
 
 /* Section 3 */
 .doing {
-display: none;
+  display: none;
 }
-
 
 /* Section 4 */
 
@@ -488,8 +530,6 @@ display: none;
   padding-bottom: 56px;
   background-color: #f4f4fd;
 }
-
-
 
 .team-title {
   margin-bottom: 72px;
@@ -506,7 +546,6 @@ display: none;
   flex-direction: column;
   align-items: center;
 }
-
 
 .team-item {
   width: 260px;
@@ -578,7 +617,6 @@ display: none;
   padding-bottom: 96px;
 }
 
-
 .customers-title {
   font-size: 36px;
   line-height: 1.11;
@@ -594,7 +632,6 @@ display: none;
   justify-content: center;
   margin: -36px -8px;
 }
-
 
 .customers-item {
   width: 190px;
@@ -791,7 +828,7 @@ display: none;
 
 .modal {
   position: absolute;
-  width: 408px;
+  width: 310px;
   height: 576px;
   background-color: #fcfcfc;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
@@ -838,7 +875,7 @@ display: none;
 
 .modal-title {
   font-weight: 500;
-  font-size: 16px;
+  font-size: 10px;
   line-height: 1.5;
   text-align: center;
   letter-spacing: 0.02em;
@@ -922,7 +959,7 @@ display: none;
 }
 
 .check-text {
-  font-size: 12px;
+  font-size: 8px;
   line-height: 1.17px;
   letter-spacing: 0.04em;
   color: #757575;
@@ -930,6 +967,8 @@ display: none;
   margin-top: 16px;
   align-items: center;
 }
+
+/*font-size: 12px;*/
 
 .check-text span {
   width: 16px;
@@ -981,61 +1020,209 @@ display: none;
   .container {
     max-width: 426px;
   }
-  
+
+  .menu-address-tel {
+    font-size: 36px;
+  }
+
+  .menu-soc-list {
+    margin: 0px -28px;
+  }
+
+  .menu-soc-item {
+    margin: 0px 28px;
+  }
+
   .feature-item {
     width: 396px;
-    }
+  }
 
+  .modal {
+    width: 408px;
+  }
 
+  .modal-title {
+    font-size: 16px;
+  }
+
+  .check-text {
+    font-size: 12px;
+  }
 }
 
 @media screen and (min-width: 768px) {
   .container {
     max-width: 761px;
-   
+  }
+  .mob-menu {
+    display: none;
   }
 
+  .menu-open {
+    display: none;
+  }
+
+  .header-nav-list {
+    display: flex;
+    margin-left: 76px;
+  }
+
+  .header-nav-list .header-nav-item + .header-nav-item {
+    margin-left: 40px;
+  }
+
+  .header-nav-item {
+  }
+  .header-nav-link {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .header-nav-link:hover {
+    color: #404bbf;
+  }
+
+  .header-nav-link:focus {
+    color: #404bbf;
+  }
+
+  .current {
+    position: relative;
+    display: block;
+  }
+
+  .current::after {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 4px;
+    background-color: #404bbf;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    border-radius: 2px;
+    display: none;
+    z-index: 1;
+    margin-bottom: -24px;
+  }
+
+  .current:not(:active)::after {
+    display: block;
+  }
+
+  .header-address {
+    display: initial;
+  }
+
+  .header-address-list .header-address-item + .header-address-item {
+    margin-left: 40px;
+  }
+
+  .header-address-item {
+  }
+
+  .header-address-mailto {
+    font-style: normal;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #434455;
+    margin-left: 122px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .header-address-mailto:hover {
+    color: #404bbf;
+  }
+
+  .header-address-mailto:focus {
+    color: #404bbf;
+  }
+
+  .header-address-tel {
+    font-style: normal;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #434455;
+    margin-left: 80px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .header-address-tel:hover {
+    color: #404bbf;
+  }
+
+  .header-address-tel:focus {
+    color: #404bbf;
+  }
+
+  .hero {
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/hero-tab.jpg);
+    background-size: 768px 436px;
+  }
+
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    .hero {
+      background-image: linear-gradient(
+          rgba(46, 47, 66, 0.7),
+          rgba(46, 47, 66, 0.7)
+        ),
+        url(../images/hero-tab-2x.jpg);
+    }
+  }
+
+  .hero-title {
+    width: 496px;
+
+    font-size: 56px;
+    line-height: 1.07;
+    margin-bottom: 36px;
+  }
 
   .feature-list {
-   
     flex-wrap: wrap;
     flex-direction: inherit;
     margin: -36px -7px;
-        
   }
 
   .feature-title {
     text-align: left;
   }
-  
-    
+
   .feature-item {
-       width: 356px;
-       margin: 36px 7px;
+    width: 356px;
+    margin: 36px 7px;
   }
- 
-  
 
   .doing {
     display: none;
-    }
+  }
 
+  .team > .container {
+    max-width: 582px;
+  }
 
-.team > .container {
-  max-width: 582px;
-}
+  .team-list {
+    justify-content: center;
+    flex-wrap: wrap;
+    flex-direction: inherit;
+    margin: -32px -12px;
+  }
 
-.team-list {
-  justify-content: center;
-  flex-wrap: wrap;
-  flex-direction: inherit;
-  margin: -32px -12px;
- 
-}
-
-.team-item {
-  margin: 32px 12px;
-}
+  .team-item {
+    margin: 32px 12px;
+  }
 
   .customers-item {
     width: 168px;
@@ -1046,8 +1233,8 @@ display: none;
   }
 
   .ftr-media {
-  display: flex;
-  justify-content: center;
+    display: flex;
+    justify-content: center;
   }
 
   .ftr-logo {
@@ -1061,63 +1248,92 @@ display: none;
   }
 
   .ftr-soc-title {
-     text-align: left;
+    text-align: left;
   }
   .ftr-subscribe {
-  margin-left: 108px;
+    margin-left: 108px;
   }
 
   .ftr-subscribe-text {
     text-align: left;
   }
 
-.ftr-subscribe-email {
-display: flex;
-height: 40px;
-}
+  .ftr-subscribe-email {
+    display: flex;
 
+    height: 40px;
+  }
 
-.subscribe-input {
-  width: 264px;
-}
+  .subscribe-input {
+    width: 264px;
+  }
 
-.ftr-button {
-  margin-left: 24px;
- 
-}
-
+  .ftr-button {
+    margin-left: 24px;
+  }
 }
 
 @media screen and (min-width: 1200px) {
   .container {
-     max-width: 1158px;
+    max-width: 1158px;
+  }
+
+  .header-address-list {
+    display: flex;
+  }
+
+  .hero {
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/hero.jpg);
+    background-size: 1440px 600px;
+    padding-top: 188px;
+    padding-bottom: 188px;
+  }
+
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    .hero {
+      background-image: linear-gradient(
+          rgba(46, 47, 66, 0.7),
+          rgba(46, 47, 66, 0.7)
+        ),
+        url(../images/hero-2x.jpg);
+    }
+  }
+
+  .hero-title {
+    width: 500px;
+    margin-bottom: 48px;
   }
 
   .feature {
     padding-top: 120px;
     padding-bottom: 60px;
   }
-  
+
   .feature-title {
     margin-top: 8px;
     font-weight: 500;
-   font-size: 20px;
-   line-height: 1.2;
- }
- .feature-text {
-  font-weight: 400;
- }
+    font-size: 20px;
+    line-height: 1.2;
+  }
+  .feature-text {
+    font-weight: 400;
+  }
 
-.feature-list {
-  display: flex;
-  margin: 0px -12px;
-}
+  .feature-list {
+    display: flex;
+    margin: 0px -12px;
+  }
 
- .feature-item {
-  width: 264px;
-  margin: 0px 12px;
- }
-
+  .feature-item {
+    width: 264px;
+    margin: 0px 12px;
+  }
 
   .future-ctr {
     height: 112px;
@@ -1133,7 +1349,7 @@ height: 40px;
     padding-top: 60px;
     padding-bottom: 120px;
   }
-  
+
   .doing-title {
     margin-bottom: 72px;
     font-size: 36px;
@@ -1147,64 +1363,56 @@ height: 40px;
     display: flex;
     margin: 0px -12px;
   }
-  
+
   .doing-item {
     margin: 0px 12px;
   }
-  
 
-.team {
-  padding-top: 120px;
-  padding-bottom: 120px;
+  .team {
+    padding-top: 120px;
+    padding-bottom: 120px;
+  }
+
+  .team-list {
+    flex-wrap: nowrap;
+    margin: 0px -12px;
+  }
+
+  .team-item {
+    margin: 0px 12px;
+  }
+
+  .customers {
+    padding-top: 130px;
+    padding-bottom: 120px;
+  }
+
+  .customers-list {
+    flex-wrap: nowrap;
+    margin: 0px -12px;
+  }
+
+  .customers-item {
+    width: 168px;
+    margin: 0px 12px;
+  }
+
+  .ftr {
+    padding-top: 100px;
+    padding-bottom: 100px;
+  }
+
+  .ftr-content {
+    display: flex;
+  }
+  .ftr-soc {
+    margin-left: 120px;
+  }
+
+  .ftr-subscribe {
+    margin-left: 80px;
+  }
+
+  .subscribe-input {
+  }
 }
-
-.team-list {
-  flex-wrap: nowrap;
-  margin: 0px -12px;
-}
-
-.team-item {
-margin: 0px 12px;
-}
-
- .customers {
-  padding-top: 130px;
-  padding-bottom: 120px;
- }
-  
- .customers-list {
-  flex-wrap: nowrap;
-  margin: 0px -12px;
- }
-
- .customers-item {
-  width: 168px;
-  margin: 0px 12px;
- }
-
- .ftr {
-  padding-top: 100px;
-  padding-bottom: 100px;
- 
-}
-
-.ftr-content {
-  display: flex;
-  
-}
-.ftr-soc {
-  margin-left: 120px;
-}
-
-.ftr-subscribe {
-  margin-left: 80px;
-}
-
-.subscribe-input {
-
-}
-
-}
-
-
-  
