--- a/css/styles.css
+++ b/css/styles.css
@@ -108,13 +108,7 @@ body {
 }
 
 /*Mobile menu*/
-.mob-menu > .container {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  overflow-y: auto;
-}
+
 
 .menu-open {
   display: block;
@@ -135,8 +129,16 @@ body {
   padding-top: 24px;
   padding-bottom: 40px;
   padding-left: 40px;
+ 
   box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
+}
+.mob-menu > .container {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  
 }
 
 .menu-close {
@@ -160,6 +162,7 @@ body {
 .mob-menu-link {
   font-size: 36px;
   line-height: 1.11;
+  font-weight: 700;
   letter-spacing: 0.02em;
   text-transform: capitalize;
   color: #2e2f42;
@@ -185,6 +188,7 @@ body {
   font-style: normal;
   font-size: 25px;
   line-height: 1.1;
+  font-weight: 700;
   text-transform: capitalize;
   color: #434455;
 }
@@ -215,7 +219,7 @@ body {
 
 .menu-soc-list {
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   margin: 0px -15px;
 }
 
@@ -285,6 +289,7 @@ body {
   margin-top: 17px;
   margin-left: auto;
   margin-right: auto;
+  text-align: left;
 }
 /*width: 264px;
   font-size: 16px;
@@ -527,7 +532,7 @@ background-color: #2e2f42; */
 
 .team {
   padding-top: 96px;
-  padding-bottom: 56px;
+  padding-bottom: 24px;
   background-color: #f4f4fd;
 }
 
@@ -1021,6 +1026,8 @@ background-color: #2e2f42; */
     max-width: 426px;
   }
 
+
+
   .menu-address-tel {
     font-size: 36px;
   }
@@ -1118,22 +1125,21 @@ background-color: #2e2f42; */
     display: initial;
   }
 
-  .header-address-list .header-address-item + .header-address-item {
-    margin-left: 40px;
-  }
+  
 
   .header-address-item {
   }
 
   .header-address-mailto {
     font-style: normal;
-    font-size: 16px;
-    line-height: 1.5;
+    font-size: 12px;
+    line-height: 1.17;
     letter-spacing: 0.02em;
     color: #434455;
     margin-left: 122px;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
+
 
   .header-address-mailto:hover {
     color: #404bbf;
@@ -1145,11 +1151,11 @@ background-color: #2e2f42; */
 
   .header-address-tel {
     font-style: normal;
-    font-size: 16px;
-    line-height: 1.5;
+    font-size: 12px;
+    line-height: 1.17;
     letter-spacing: 0.02em;
     color: #434455;
-    margin-left: 80px;
+    margin-left: 122px;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 
@@ -1207,6 +1213,9 @@ background-color: #2e2f42; */
 
   .doing {
     display: none;
+  }
+  .team {
+    padding-bottom: 96px;
   }
 
   .team > .container {
@@ -1270,6 +1279,7 @@ background-color: #2e2f42; */
 
   .ftr-button {
     margin-left: 24px;
+    margin-top: 0px;
   }
 }
 
@@ -1281,6 +1291,23 @@ background-color: #2e2f42; */
   .header-address-list {
     display: flex;
   }
+
+  .header-address-list .header-address-item + .header-address-item {
+    margin-left: -75px;
+  }
+
+
+  .header-address-mailto {
+    font-size: 16px;
+    line-height: 1.5;
+  }
+
+
+  .header-address-tel {
+    font-size: 16px;
+    line-height: 1.5;
+  }
+
 
   .hero {
     background-image: linear-gradient(
@@ -1399,7 +1426,7 @@ background-color: #2e2f42; */
 
   .ftr {
     padding-top: 100px;
-    padding-bottom: 100px;
+    padding-bottom: 22px;
   }
 
   .ftr-content {
